# dyn-trait-load

./: Cargo.toml  one.yaml  test.yaml
src/: main.rs  test.rs
