[package]
name = "dyn_load_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
downcast-rs = "1.2.0"
num-traits = "0.2.15"
serde = "1.0.163"
serde_yaml = "0.9.21"
typetag = "0.2.8"
